hphp/hack/test/typecheck/pipe_operator_not_leaking_dollardollar.php.exp
File "pipe_operator_not_leaking_dollardollar.php", line 13, characters 14-15:
Variable $$ is undefined, or there exists at least one control flow path reaching this point which does not define $$. (Naming[2050])
